Sleep record base

--- a/src/app/core/sleep-record/sleep-record.component.html
+++ b/src/app/core/sleep-record/sleep-record.component.html
@@ -1,1 +1,64 @@
-<p>sleep-record works!</p>
+<div class="body">
+  <div class="header">Sleep Record <span></span></div>
+
+  <mat-tab-group mat-stretch-tabs animationDuration="0ms">
+    <mat-tab label="Day">Content 1</mat-tab>
+    <mat-tab label="Week">Content 2</mat-tab>
+    <mat-tab label="Month">Content 3</mat-tab>
+  </mat-tab-group>
+  <div class="sleep-status">
+    <p class="time-period">
+      {{ datesRange[0] | date: "MMM d" }} -
+      {{ datesRange[1] | date: "MMM d, y" }}
+    </p>
+
+    <div class="row">
+      <mat-card class="mat-card">
+        <mat-card-subtitle>Average Time</mat-card-subtitle>
+        <mat-card-content>
+          <p class="large-text">{{ averageTime }}</p>
+        </mat-card-content>
+        <mat-card-actions>
+          <button class="btn details-btn">Details</button>
+        </mat-card-actions>
+      </mat-card>
+      <mat-card class="mat-card">
+        <mat-card-subtitle>Sleep Quality</mat-card-subtitle>
+        <mat-card-content>
+          <span class="large-text">{{ sleepQuality }}/</span
+          ><span class="subtext">100</span>
+        </mat-card-content>
+        <mat-card-actions>
+          <button class="btn status-btn">Good</button>
+        </mat-card-actions>
+      </mat-card>
+    </div>
+  </div>
+  <div class="sleeping-state">
+    <h3>Sleeping State</h3>
+    <div class="row">
+      <div class="progress" *ngFor="let sleepingState of sleepingStates">
+        <circle-progress
+          [percent]="sleepingState.rate"
+          [radius]="35"
+          [space]="-5"
+          [outerStrokeWidth]="5"
+          [innerStrokeWidth]="5"
+          [outerStrokeColor]="'#78C000'"
+          [innerStrokeColor]="'#C7E596'"
+          [animation]="true"
+          [animationDuration]="300"
+          [showSubtitle]="false"
+          [titleFontWeight]="'700'"
+          [outerStrokeGradient]="true"
+          [innerStrokeColor]="'#e7e8ea'"
+          [outerStrokeColor]="sleepingState.outerStrokeColor"
+          [outerStrokeGradientStopColor]="
+            sleepingState.outerStrokeGradientStopColor
+          "
+        ></circle-progress>
+        <span class="grey">{{ sleepingState.name }}</span>
+      </div>
+    </div>
+  </div>
+</div>
