--- a/src/app/core/sleep-record/sleep-record.component.html
+++ b/src/app/core/sleep-record/sleep-record.component.html
@@ -1,40 +1,123 @@
 <div class="body">
-  <div class="header">Sleep Record <span></span></div>
+  <div class="header">
+    Sleep Record <span (click)="changeView()"> &#8767;</span>
+  </div>
 
   <mat-tab-group animationDuration="0ms" [disablePagination]="true">
     <mat-tab label="Day">
-      <!-- <ngx-charts-line-chart
-        [animations]="true"
-        [legend]="false"
-        [showXAxisLabel]="false"
-        [showYAxisLabel]="false"
-        [xAxis]="true"
-        [yAxis]="true"
-        [timeline]="false"
-        [results]="lineData"
-        [showGridLines]="false"
-        [roundDomains]="true"
-        [timeline]="false"
-      >
-      </ngx-charts-line-chart> -->
-
-      <ngx-charts-bar-vertical
-        [animations]="true"
-        [results]="data"
-        [xAxis]="true"
-        [rotateXAxisTicks]="true"
-        [gradient]="true"
-        [showGridLines]="false"
-      ></ngx-charts-bar-vertical>
+      <div class="row">
+        <ngx-charts-line-chart
+          *ngIf="!chartView"
+          [animations]="true"
+          [legend]="false"
+          [showXAxisLabel]="false"
+          [showYAxisLabel]="false"
+          [xAxis]="true"
+          [yAxis]="true"
+          [yAxisTicks]="['1', '5']"
+          [timeline]="false"
+          [results]="dataLine[0]"
+          [showGridLines]="true"
+          [roundDomains]="true"
+          [timeline]="false"
+          [curve]="curve"
+        >
+        </ngx-charts-line-chart>
+        <ngx-charts-bar-vertical
+          *ngIf="chartView"
+          [view]="[285, 185]"
+          [barPadding]="1"
+          [animations]="true"
+          [gradient]="true"
+          [rotateXAxisTicks]="true"
+          [xAxis]="true"
+          [yAxis]="true"
+          [yAxisTicks]="['1', '5']"
+          [results]="data[0]"
+          [customColors]="customColors[0]"
+        ></ngx-charts-bar-vertical>
+      </div>
     </mat-tab>
-    <mat-tab label="Week">Content 2</mat-tab>
-    <mat-tab label="Month">Content 3</mat-tab>
+    <mat-tab label="Week">
+      <div class="row">
+        <ngx-charts-line-chart
+          *ngIf="!chartView"
+          [animations]="true"
+          [legend]="false"
+          [showXAxisLabel]="false"
+          [showYAxisLabel]="false"
+          [xAxis]="true"
+          [yAxis]="true"
+          [yAxisTicks]="['7', '23']"
+          [timeline]="false"
+          [results]="dataLine[1]"
+          [showGridLines]="true"
+          [roundDomains]="true"
+          [timeline]="false"
+          [curve]="curve"
+        >
+        </ngx-charts-line-chart>
+        <ngx-charts-bar-vertical
+          *ngIf="chartView"
+          [view]="[285, 185]"
+          [barPadding]="28"
+          [animations]="true"
+          [gradient]="true"
+          [rotateXAxisTicks]="true"
+          [yAxisTicks]="['7', '23']"
+          [xAxis]="true"
+          [yAxis]="true"
+          [results]="data[1]"
+          [customColors]="customColors[1]"
+        ></ngx-charts-bar-vertical>
+      </div>
+    </mat-tab>
+    <mat-tab label="Month">
+      <div class="row">
+        <ngx-charts-line-chart
+          *ngIf="!chartView"
+          [animations]="true"
+          [legend]="false"
+          [showXAxisLabel]="false"
+          [showYAxisLabel]="false"
+          [xAxis]="true"
+          [yAxis]="true"
+          [yAxisTicks]="['7', '23']"
+          [timeline]="false"
+          [results]="dataLine[2]"
+          [showGridLines]="true"
+          [roundDomains]="true"
+          [timeline]="false"
+          [curve]="curve"
+        >
+        </ngx-charts-line-chart>
+        <ngx-charts-bar-vertical
+          *ngIf="chartView"
+          [view]="[285, 185]"
+          [barPadding]="1"
+          [animations]="true"
+          [gradient]="true"
+          [rotateXAxisTicks]="true"
+          [yAxisTicks]="['7', '23']"
+          [xAxis]="true"
+          [yAxis]="true"
+          [results]="data[2]"
+          [customColors]="customColors[2]"
+        ></ngx-charts-bar-vertical>
+      </div>
+    </mat-tab>
   </mat-tab-group>
   <div class="sleep-status">
-    <h3>
-      {{ datesRange[0] | date: "MMM d" }} -
-      {{ datesRange[1] | date: "MMM d, y" }}
-    </h3>
+    <div class="row left" *ngIf="chartView">
+      <div class="circleBase type1"></div>
+      <span class="grey">Above average</span>
+      <div class="circleBase type2"></div>
+      <span class="grey">Below average</span>
+    </div>
+    <h5>
+      {{ datesRange[0] | date : "MMM d" }} -
+      {{ datesRange[1] | date : "MMM d, y" }}
+    </h5>
 
     <div class="row">
       <mat-card
@@ -88,5 +171,6 @@
       </div>
     </div>
   </div>
-  <button (click)="onToggle()">change mode</button>
+  <button (click)="onToggle()">Change mode</button>
+  <button (click)="goToWatchList()">Go to watch list</button>
 </div>
