--- a/src/app/core/sleep-record/sleep-record.component.scss
+++ b/src/app/core/sleep-record/sleep-record.component.scss
@@ -85,21 +85,22 @@
     background-color: white;
     color: black;
 }
-
-.mat-tab-group.mat-primary .mat-ink-bar,
-.mat-tab-nav-bar.mat-primary .mat-ink-bar {
+.chart-tab {
+    height: 20px;
+    width: 95px;
+    text-align: center;
+    color:#c2c4d1;
+    cursor: pointer;
+    font-weight: 500;
+}
+.ink-bar {
     background: rgb(241, 76, 241);
     background: linear-gradient(90deg, #f14cf1 0%, #8728fb 75%);
-
     height: 5px;
     border-radius: 100px;
-    margin-bottom: 5px;
-}
-
-.mat-tab-label {
-    min-width: 0 !important;
-    width: 95px ;
-    color: #c2c4d1;
+    margin-bottom: 5px;   
+    width: 40px;
+    margin: 0 27.5px;
 }
 
 .circleBase {
