--- a/src/app/shared/bar-chart/bar-chart.component.html
+++ b/src/app/shared/bar-chart/bar-chart.component.html
@@ -1,3 +1,3 @@
-<canvas id="barchart" width="285" height="185">
+<canvas id="barchart" width="285" height="185" (click)="drawAnimation()">
 
 </canvas>
