--- a/src/app/shared/circle-progress-bar/circle-progress-bar.component.scss
+++ b/src/app/shared/circle-progress-bar/circle-progress-bar.component.scss
@@ -5,6 +5,7 @@ span#procent {
     top: 50%;
     font-size: 20px;
     transform: translate(-50%, -50%);
+    font-weight: 600;
 }
 
 span#procent::after {
